# khive.d

./: .env.example  .gitignore  ASYNC_RESOURCE_MANAGEMENT_SUMMARY.md  CLAUDE.md  CLEAN_CLI_VALIDATION.md  COMMIT_CLI_ANALYSIS_PHASE1.md  KHIVE.md  KHIVE_COMMIT_EVALUATION.md  PERFORMANCE_TESTING_IMPLEMENTATION_SUMMARY.md  PR_CLI_VALIDATION.md  PR_COMMAND_ANALYSIS_FINAL.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_REMEDIATION_STRATEGY.md  SESSION_PERSISTENCE_RECOVERY_TESTING_SUMMARY.md  TEST_SUITE_ANALYSIS_REPORT.md  breaking_change.py  demo_performance_monitoring.py  json_test.py  pyproject.toml  pytest.ini  ruff.toml  run_planning_tests.py  security_validation_demo.py  test.ipynb  test_feature.py
.claude/: settings.json
.claude/commands/: session-start.md  setup-issues.md
.claude/scripts/: verify_issue_plans.py
.claude/templates/: issue_plan_template.md
.github/workflows/: ci.yml  performance.yml  release.yml
.khive/: .gitignore  ci.toml  fmt.toml
.khive/analysis/: plan_cli_phase1_analysis_20250824.md
.khive/performance/: config.json
.khive/validation/: ci-service.md  dev-service.md  documentation-correction-summary.md  file-service.md  final-resolution-summary.md  fmt-service.md  git-service.md  info-service.md  init-service.md  mcp-service.md  new-doc-service.md  progress-summary.md  resolution-methodology.md  roo-service.md
docs/: ci-cd-integration.md  performance_monitoring.md
docs/design/: ai_agent_cli_improvements.md  ai_cli_implementation_guide.md  ai_cli_synthesis_roadmap.md  ai_first_cli_architecture.md  meta_ai_tooling_design.md
docs/services/: lionagi_git_integration.md
flows/: _EXAMPLE_ISSUE_PLAN.md
flows/v4tdd/: runner.py
frontend/: .dockerignore  .gitignore  .prettierignore  ARCHITECTURAL_OPTIMIZATION_SPECIFICATION.md  ARCHITECTURE.md  COMMAND_PALETTE_FEATURES.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  KHIVE_API_INTEGRATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_REVIEW.md  README.md  VISUAL_TESTING_DELIVERABLES.md  VISUAL_TESTING_GUIDE.md  VISUAL_TESTING_REPORT_TEMPLATE.md  docker-compose.yml  jest.config.js  jest.global-setup.js  jest.global-teardown.js  jest.setup.js  lighthouserc.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/__mocks__/: fileMock.js
frontend/e2e/: PERFORMANCE_TESTING_DELIVERABLES.md  README.md  cli-workflows.spec.ts  command-execution.spec.ts  command-palette.spec.ts  context-shortcuts.spec.ts  conversational-interface.spec.ts  cross-browser-visual.spec.ts  example.spec.ts  global-setup.ts  global-teardown.ts  global.setup.ts  keyboard-performance.spec.ts  keyboard-shortcuts-visual.spec.ts  keyboard-shortcuts.spec.ts  live-system-validation.spec.ts  navigation.spec.ts  performance-baseline.spec.ts  performance-cli.spec.ts  performance-context.spec.ts  performance-memory.spec.ts  performance-runner.spec.ts  performance-validation.spec.ts  performance-websocket.spec.ts  performance.spec.ts  professional-workspace-performance.spec.ts  professional-workspace.spec.ts  real-time-events.spec.ts  run-demo-tests.sh  run-keyboard-tests.sh  ux-transformation-comparison.spec.ts  vim-navigation.spec.ts  visual-regression.spec.ts  websocket-connection.spec.ts
frontend/scripts/: generate-visual-baselines.js
mcps/: khive_info.py  khive_reader.py
performance_reports/: automated_performance_report_20250823_033037.json  khive_demo_performance_20250823_033412.html  khive_demo_performance_20250823_033412.json  khive_demo_performance_20250823_033412_summary.txt  test_report_20250823_033258.json  test_report_20250823_033328.json
performance_results/: pytest_results_20250823_033035.xml
scripts/: cleanup_workspace.sh  cleanup_workspaces.sh  setup_performance_monitoring.py
scripts/performance/: run_performance_tests.py
src/khive/: _types.py  config.py  utils.py
tests/: README.md  TESTING_GUIDE.md  TESTING_INFRASTRUCTURE.md  __init__.py  backend_api_integration_test.py  conftest.py  dashboard_test.html  test_config_comprehensive.py  test_infrastructure_example.py
tests/adapters/: __init__.py  test_mcp_adapters.py
tests/async/: README.md  __init__.py  conftest.py  test_async_operations.py  test_concurrency_patterns.py  test_resource_management.py
tests/basic/: test_base_models.py  test_cli.py  test_config.py  test_core_functionality.py  test_integration.py  test_khive_basic.py
tests/cli/: test_base_framework.py  test_clean.py  test_cli_base_classes.py  test_cli_basic.py  test_cli_dispatcher.py  test_cli_error_handling.py  test_cli_integration.py  test_command_dispatcher.py  test_commit.py  test_error_handling.py  test_khive_ci.py  test_khive_cli_dispatcher.py  test_khive_fmt.py  test_khive_info.py  test_khive_init.py  test_khive_mcp.py  test_khive_new_doc.py  test_khive_reader.py  test_khive_roo.py  test_new_doc.py  test_pr.py
tests/clients/: test_api_client_comprehensive.py  test_executor_comprehensive.py  test_rate_limiter.py  test_rate_limiter_comprehensive.py  test_resilience_comprehensive.py
tests/commands/: __init__.py  test_info_command.py
tests/connections/: test_endpoint_config_comprehensive.py  test_endpoint_coverage_additional.py
tests/fixtures/: README.md  __init__.py  agent_fixtures.py  async_fixtures.py  cli_fixtures.py  filesystem_fixtures.py  gated_refinement_fixtures.py  mcp_fixtures.py  mock_fixtures.py  performance_fixtures.py  planning_fixtures.py  security_fixtures.py  service_fixtures.py
tests/integration/: MCP_INTEGRATION_TEST_SUMMARY.md  __init__.py  conftest.py  test_advanced_coordination_patterns.py  test_artifacts_integration.py  test_async_error_coordination.py  test_cache_integration.py  test_complete_workflows.py  test_comprehensive_error_propagation.py  test_cross_service_workflows.py  test_external_api_integration.py  test_mcp_cc_toolkit_integration.py  test_mcp_protocol_integration.py  test_mcp_server_lifecycle_management.py  test_multi_agent_coordination.py  test_orchestration_security_integration.py  test_orchestration_workflows.py  test_performance_load_integration.py  (+6 more)
(+690 files in other folders)
