[project]
name = "khive"
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=22.1.0",
    "fastmcp>=2.11.0",
    "lionagi[graph,postgres,rich,sqlite]>=0.15.9",
    "mcp>=1.13.0",
    "nest-asyncio>=1.5.0",
    "openai>=1.100.0",
    "plotly>=6.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "redis[hiredis]>=5.0.0",
    "streamlit>=1.45.0",
    "tenacity>=8.5.0",
    "websockets>=14.0",
]

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default test execution with coverage enabled
addopts = [
    "-v",                                    # Verbose output
    "--tb=short",                           # Short traceback format
    "--strict-markers",                     # Ensure all markers are defined
    "--durations=5",                        # Show 5 slowest tests
    "--cov=src/khive",                      # Enable coverage
    "--cov-report=term-missing",            # Show missing lines
    "--cov-fail-under=90",                  # Target >90% coverage as required
    "--ignore=tests/integration/test_mcp_cc_toolkit_integration.py",
    "--ignore=tests/integration/test_mcp_protocol_integration.py", 
    "--ignore=tests/integration/test_mcp_server_lifecycle_management.py",
    "--ignore=tests/toolkits/cc/test_configuration.py",
    "--ignore=tests/toolkits/cc/test_mcp_integration.py",
]

# Async support
asyncio_mode = "auto"

# Essential test markers only
markers = [
    "unit: Fast unit tests",
    "integration: Integration tests with dependencies",
    "slow: Slow-running tests (>5s)",
    "cli: Command-line interface tests",
    "performance: Performance and benchmark tests",
    "benchmark: Performance benchmark tests requiring timing assertions",
    "boundary: Boundary condition and edge case tests",
    "regression: Regression tests for known bug fixes",
    "external: Tests requiring external services (OpenAI API, etc.)",
    "consistency: Tests for deterministic behavior validation",
    "async_test: Async/await pattern tests",
    "concurrency: Concurrent execution and thread safety tests",
    "timeout_handling: Timeout and cancellation handling tests",
    "race_condition: Race condition detection tests",
    "deadlock: Deadlock prevention tests",
    "resource_cleanup: Resource cleanup and management tests",
    "boundary: Boundary condition and edge case tests",
    "mcp_protocol: MCP protocol compliance tests",
    "mcp_transport: MCP transport reliability tests",
    "mcp_lifecycle: MCP server lifecycle management tests",
    "mcp_server_lifecycle: MCP server lifecycle with configuration and workspace management",
    "mcp_error_handling: MCP error handling and recovery tests",
    "mcp_configuration: MCP configuration management tests",
    "mcp_performance: MCP performance and stress tests",
    "mcp_cc_toolkit: MCP CC toolkit integration tests",
    "mcp_workspace: MCP workspace isolation tests",
    "mcp_real_servers: MCP real server integration tests",
    "security: Security validation and vulnerability tests",
]

# Test environment
env = [
    "KHIVE_TEST_MODE=true",
    "KHIVE_DISABLE_EXTERNAL_APIS=true",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:streamlit.*",
]

[tool.coverage.run]
source = ["src/khive"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 90.0  # Target >90% coverage for production deployment

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "ruff>=0.12.9",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.1.5",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.1",
    "pytest-randomly>=3.15.0",
    "pytest-clarity>=1.0.1",
    "pytest-html>=4.1.1",
    "memory-profiler>=0.61.0",
    "isort>=6.0.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mypy>=1.11.0",
    "bandit>=1.7.10",
    "coverage>=7.6.0",
    "locust>=2.32.3",
    "hypothesis>=6.138.2",
]


[tool.hatch.build.targets.wheel]
packages = ["src/khive"]

[project.scripts]                # PEP 621 console-scripts table
khive         = "khive.cli.khive_cli:main"
